MapView Displays User's Current Location

--- a/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
+++ b/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
@@ -103,12 +103,20 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="yth-LW-XzR">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="tju-rv-x6n" id="FqQ-C3-wAO"/>
+                                </connections>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="IbJ-Fo-hka"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="1Ji-fF-QGj"/>
+                    <navigationItem key="navigationItem" id="1Ji-fF-QGj">
+                        <barButtonItem key="leftBarButtonItem" image="line.horizontal.3" catalog="system" id="Vfl-ay-v44"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="yth-LW-XzR" id="lCs-ep-U3W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="840-UQ-vcD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -134,6 +142,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
