--- a/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
+++ b/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                 <rect key="frame" x="68" y="431" width="300" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5C-HF-cOd">
                                 <rect key="frame" x="72" y="496" width="130" height="50"/>
@@ -322,8 +322,20 @@
                                 <action selector="cancelHiddenGem:" destination="D1k-Qq-Fbf" id="JMM-0h-ORD"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Add" id="CpE-6o-y4K"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="CpE-6o-y4K">
+                            <connections>
+                                <action selector="onAdd:" destination="D1k-Qq-Fbf" id="7Rs-T8-9bG"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addressField" destination="NLb-Em-15r" id="Nd9-Mh-rwP"/>
+                        <outlet property="cityField" destination="REk-it-6Ic" id="3O2-RY-iLT"/>
+                        <outlet property="descriptionField" destination="kE2-9e-CtF" id="kQc-NH-U03"/>
+                        <outlet property="nameField" destination="cYd-01-Fi6" id="8FE-MY-jlC"/>
+                        <outlet property="stateField" destination="WTg-0y-5fb" id="SdZ-yT-bMK"/>
+                        <outlet property="zipField" destination="VA0-6t-PK1" id="dpH-Qf-nLi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rf5-fY-lQw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
